--- a/assets/styles/profile.css
+++ b/assets/styles/profile.css
@@ -64,17 +64,18 @@ body, html {
   background-color: #79a6fe; /* Couleur de fond au survol */
 }
 .container {
-    display: flex;
+    /* align-items: center; */
+    display: contents;
     flex-direction: column;
-    width: 100%;
-    height: 110vh;
+    width: 60%;
+    height: 130vh;
   }
   
   .wrapper {
     height: 110vh;
     margin-top: 2%;
     display: flex;
-  
+    flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
@@ -99,7 +100,7 @@ body, html {
   .row {
     display: flex;
     gap: 1em;
-    min-height: 180px;
+    /* min-height: 150px; */
     
     
   
@@ -113,8 +114,8 @@ body, html {
   .card {
     border-radius: 20px;
     background-color: rgba(255, 255, 255, 0.1);
-    min-height: 180px;
-    min-width: 220px;
+    /* min-height: 180px;
+    min-width: 220px; */
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -273,7 +274,7 @@ body, html {
   }
   
   .circle-text {
-    font-size: .7em;
+    font-size: .80em;
     fill: rgb(243, 241, 241);
   }
   
@@ -284,8 +285,8 @@ body, html {
   }
   
   .kb-text {
-    fill: rgba(227, 195, 231, 1);
-    font-size: .10em;
+    /* fill: rgba(227, 195, 231, 1); */
+    font-size: .80em;
   }
   
   rect {
